Dependency version updates

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,5 @@ version = "0.1.0"
 authors = ["Chris Prohoda <cgprohoda@gmail.com>"]
 
 [dependencies]
-piston_window = "0.67.0"
+piston_window = "0.77.0"
+rand = "0.4"
